# xviewer-plugins

./: .gitignore  ChangeLog  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  meson.build
.circleci/: config.yml
debian/: changelog  control  control.in  copyright  rules
plugins/: Makefile.am  Makefile.in  meson.build
plugins/exif-display/: Makefile.am  Makefile.in  eog-exif-display-plugin-resources.c  exif-display.plugin.desktop.in  meson.build  org.x.viewer.plugins.exif-display.gschema.xml.in  xviewer-exif-display-plugin-resources.c  xviewer-exif-display-plugin-settings.h  xviewer-exif-display-plugin-setup.c  xviewer-exif-display-plugin-setup.h  xviewer-exif-display-plugin.c  xviewer-exif-display-plugin.gresource.xml  xviewer-exif-display-plugin.h  xviewer-exif-display.metainfo.xml.in
plugins/export-to-folder/: Makefile.am  Makefile.in  export-to-folder.c  export-to-folder.plugin.desktop.in  export-to-folder.py  meson.build  org.x.viewer.plugins.export-to-folder.gschema.xml.in  xviewer-export-to-folder.metainfo.xml.in
plugins/fit-to-width/: Makefile.am  Makefile.in  fit-to-width.plugin.desktop.in  xviewer-fit-to-width-plugin.c  xviewer-fit-to-width-plugin.h  xviewer-fit-to-width.metainfo.xml.in
plugins/fullscreenbg/: Makefile.am  Makefile.in  fullscreenbg.plugin.desktop.in  fullscreenbg.py  org.x.viewer.plugins.fullscreenbg.gschema.xml.in  xviewer-fullscreenbg.metainfo.xml.in
plugins/hide-titlebar/: Makefile.am  Makefile.in  hide-titlebar.plugin.desktop.in  xviewer-hide-titlebar-plugin.c  xviewer-hide-titlebar-plugin.h  xviewer-hide-titlebar.metainfo.xml.in
plugins/light-theme/: Makefile.am  Makefile.in  light-theme.plugin.desktop.in  meson.build  xviewer-light-theme-plugin.c  xviewer-light-theme-plugin.h  xviewer-light-theme.metainfo.xml.in
plugins/map/: Makefile.am  Makefile.in  map.plugin.desktop.in  meson.build  xviewer-map-plugin.c  xviewer-map-plugin.h  xviewer-map.metainfo.xml.in
plugins/postasa/: Makefile.am  Makefile.in  eog-postasa-plugin-resources.c  meson.build  postasa.plugin.desktop.in  xviewer-postasa-plugin-resources.c  xviewer-postasa-plugin.c  xviewer-postasa-plugin.gresource.xml  xviewer-postasa-plugin.h  xviewer-postasa.metainfo.xml.in
plugins/postr/: Makefile.am  Makefile.in  meson.build  postr.plugin.desktop.in  xviewer-postr-plugin.c  xviewer-postr-plugin.h  xviewer-postr.metainfo.xml.in
plugins/pythonconsole/: Makefile.am  Makefile.in  __init__.py  config.py  console.py  meson.build  org.x.viewer.plugins.pythonconsole.gschema.xml.in  pythonconsole.plugin.desktop.in  xviewer-pythonconsole.metainfo.xml.in
plugins/rename-file/: rename-file.plugin  rename-file.py
plugins/send-by-mail/: Makefile.am  Makefile.in  meson.build  send-by-mail.plugin.desktop.in  xviewer-send-by-mail-plugin.c  xviewer-send-by-mail-plugin.h  xviewer-send-by-mail.metainfo.xml.in
plugins/slideshowshuffle/: Makefile.am  Makefile.in  meson.build  slideshowshuffle.c  slideshowshuffle.plugin.desktop.in  slideshowshuffle.py  xviewer-slideshowshuffle.metainfo.xml.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  be@latin.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  mr.po  nb.po  or.po  pa.po  (+18 more)
